--- a/cards/css/master.css
+++ b/cards/css/master.css
@@ -12,7 +12,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 /* Element */
 html, body { height: 100%; width: 100%; }
-body { background-color: #e7e7e7; font-family: 'card_charactersregular', Helvetica, Arial, sans-serif; font-size: 10px; padding: 20px; }
+body { background-color: #e7e7e7; font-family: 'card_charactersregular', Helvetica, Arial, sans-serif; font-size: 10px;}
 h1 { color: red; font-size: 96px; }
 
 
@@ -107,4 +107,18 @@ h1 { color: red; font-size: 96px; }
   -webkit-border-radius: 10px;
   -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+
+#testcard {
+  display: none;
+}
+.card_container {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+#board {
+  width: 100%;
+  height: 100%;
 }
