--- a/cards/css/master.css
+++ b/cards/css/master.css
@@ -110,6 +110,9 @@ h1 { color: red; font-size: 96px; }
 }
 
 
+
+
+/* THE BOARD */
 #testcard {
   display: none;
 }
@@ -121,4 +124,5 @@ h1 { color: red; font-size: 96px; }
 #board {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
