--- a/cards/css/master.css
+++ b/cards/css/master.css
@@ -19,7 +19,7 @@ h1 { color: red; font-size: 96px; }
 /* Card */
 #table { height: 100%; position: relative; width: 100%; }
 
-.card { float: left; height: 280px; margin: 0 15px 15px 0; width: 200px;}
+.card { float: left; height: 280px; margin: 0 15px 15px 0; width: 200px; }
 .card .back {
   background: #fff url('../images/card_back.jpg') center center no-repeat;
   -webkit-transform: rotateY(180deg);
@@ -32,7 +32,7 @@ h1 { color: red; font-size: 96px; }
 .card.heart, .card.diamond { color: red; }
 
 .card .corner { line-height: 1; overflow: hidden; position: absolute; text-align: center; }
-.card .corner span { display: block; font-size: 24px; font-weight: normal; }
+.card .corner span { display: block; font-family: 'card_charactersregular'; font-size: 24px; font-weight: normal; }
 .card .corner .number { font-size: 32px; height: 32px; line-height: 34px; }
 .card.ten .corner .number { font-size: 30px; letter-spacing: -4.8px; margin-left: -8px; width: 42px; padding-right: 4px;}
 .card .corner.top { left: 8px; top: 12px; }
