--- a/cards/css/master.css
+++ b/cards/css/master.css
@@ -11,8 +11,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 
 /* Element */
-html, body { height: 100%; width: 100%; }
-body { background-color: #e7e7e7; font-family: 'card_charactersregular', Helvetica, Arial, sans-serif; font-size: 10px;}
+html, body { height: 100%; width: 100%; max-height: 100%; max-width: 100%; overflow: hidden; }
+body { background-image: url('../images/circles.png'); font-family: 'card_charactersregular', Helvetica, Arial, sans-serif; font-size: 10px;}
 h1 { color: red; font-size: 96px; }
 
 
@@ -107,8 +107,8 @@ h1 { color: red; font-size: 96px; }
   left: 0;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
-  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -131,4 +131,13 @@ h1 { color: red; font-size: 96px; }
 
 .in-hand {
   cursor: pointer;
+}
+
+#HACK {
+  z-index: 99999;
+  height: 280px;
+  width: 200px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
