--- a/cards/css/master.css
+++ b/cards/css/master.css
@@ -12,7 +12,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 /* Element */
 html, body { height: 100%; width: 100%; max-height: 100%; max-width: 100%; overflow: hidden; }
-body { background-image: url('../images/circles.png'); font-family: 'card_charactersregular', Helvetica, Arial, sans-serif; font-size: 10px;}
+body { background-image: url('../images/tasky_pattern.png'); font-family: 'card_charactersregular', Helvetica, Arial, sans-serif; font-size: 10px;}
 h1 { color: red; font-size: 96px; }
 
 
@@ -140,4 +140,68 @@ h1 { color: red; font-size: 96px; }
   position: absolute;
   top: 0;
   left: 0;
+}
+
+
+/* Status board. */
+.players {
+  color: #fff;
+}
+
+/* playing chips. */
+.chips {
+}
+
+.chip {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-color: #fff;
+  border-radius: 100%;
+  bottom: 0px;
+  right: 22%;
+}
+
+.cover {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 100000;
+  pointer-events: none;
+  background: rgba(0,0,0,0.3);
+  -webkit-filter: contrast(200%)
+  top: 0;
+  left: 0;
+}
+
+.spotlight {
+  position: absolute;
+  width: 550px;
+  height: 550px;
+  background: transparent;
+  background: radial-gradient(circle, rgba(255,250,250,0.2) 0%, rgba(255,250,230,0.1) 40%, rgba(255,250,230,0.05) 50%, rgba(0,0,0,0.0) 70%);
+  -webkit-filter: contrast(253%) brightness(175%);
+  -moz-filter: contrast(253%) brightness(175%);
+  filter: contrast(253%) brightness(150%);
+  pointer-events: none;
+  z-index: 100001;
+}
+
+/* hide after deal */
+.spotlight.deck {
+  left: -250px;
+  top: -250px;
+}
+
+/* adjust left and top */
+.spotlight.center {
+  display: none;
+}
+
+/* adjust left */
+.spotlight.player {
+  display: none;
+  width: 700px;
+  height: 700px;
+  bottom: -400px;
 }
