--- a/cards/css/master.css
+++ b/cards/css/master.css
@@ -23,6 +23,7 @@ h1 { color: red; font-size: 96px; }
 .card .back {
   background: #fff url('../images/card_back.jpg') center center no-repeat;
   -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
   background-size: 185px 268px;}
 
 .card .front {
@@ -36,7 +37,7 @@ h1 { color: red; font-size: 96px; }
 .card .corner .number { font-size: 32px; height: 32px; line-height: 34px; }
 .card.ten .corner .number { font-size: 30px; letter-spacing: -4.8px; margin-left: -8px; width: 42px; padding-right: 4px;}
 .card .corner.top { left: 8px; top: 12px; }
-.card .corner.bottom { bottom: 12px; right: 8px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); }
+.card .corner.bottom { bottom: 12px; right: 8px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
 .card.ten .corner.top { left: 6px; }
 .card.ten .corner.bottom { right: 6px; }
 .card .suit { font-family: 'card_charactersregular'; font-size: 48px; font-weight: normal; height: 52px; line-height: 52px; overflow: hidden; position: absolute; text-align: center; width: 50px; }
@@ -46,19 +47,19 @@ h1 { color: red; font-size: 96px; }
 
 .card .middle_center { left: 76px; top: 110px; }
 .card .middle_top { left: 76px; top: 70px; }
-.card .middle_bottom { bottom: 70px; left: 76px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); }
+.card .middle_bottom { bottom: 70px; left: 76px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
 .card .middle_left { left: 34px; top: 110px; }
 .card .middle_right { right: 34px; top: 110px; }
 .card .middle_top_center { left: 76px; top: 60px; }
 .card .middle_top_left { left: 34px; top: 80px; }
 .card .middle_top_right { right: 34px; top: 80px; }
-.card .middle_bottom_left { bottom: 80px; left: 34px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); }
-.card .middle_bottom_right { bottom: 80px; right: 34px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); }
-.card .middle_bottom_center { bottom: 60px; left: 76px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); }
+.card .middle_bottom_left { bottom: 80px; left: 34px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
+.card .middle_bottom_right { bottom: 80px; right: 34px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
+.card .middle_bottom_center { bottom: 60px; left: 76px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
 
-.card .bottom_center { bottom: 24px; left: 76px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); }
-.card .bottom_left { bottom: 24px; left: 34px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); }
-.card .bottom_right { bottom: 24px; right: 34px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); }
+.card .bottom_center { bottom: 24px; left: 76px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
+.card .bottom_left { bottom: 24px; left: 34px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
+.card .bottom_right { bottom: 24px; right: 34px; -moz-transform: rotate(180deg); -webkit-transform: rotate(180deg); transform: rotate(180deg);}
 
 /* Card font */
 @font-face {
@@ -91,8 +92,10 @@ h1 { color: red; font-size: 96px; }
 .card {
   transition: 0.6s;
   -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
   position: relative;
   -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .h-0 .number, .s-0 .number, .c-0 .number, .d-0 .number {
