--- a/cards/css/master.css
+++ b/cards/css/master.css
@@ -166,8 +166,8 @@ h1 { color: red; font-size: 96px; }
   background-color: #fff;
   color: black;
   border-radius: 100%;
-  top: 0;
-  left: 0;
+  top: -100px;
+  left: -100px;
   box-shadow: 0px 0px 3px 2px black;
   font-family: Helvetica, Arial;
   text-transform: uppercase;
